# team_manager

./: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  migrate.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 14320ccc39af_initial_migration.py  aa29cbb73f73_baseline_schema.py  fa8556810689_baseline_schema.py
app/: config.py  database.py  dependencies.py  main.py
app/admin/: auth.py  panel.py  views.py
app/calendar/: dto.py  handlers.py  mappers.py  models.py  orm_models.py  repository.py  unit_of_work.py  use_cases.py
app/core/: aggregate.py  config.py  database.py  entity.py  register_handlers.py  unit_of_work.py
app/domain/: model.py
app/evaluations/: custom_exception.py  dto.py  handlers.py  management.py  mappers.py  models.py  orm_models.py  repository.py  unit_of_work.py  use_cases.py
app/frontend/: calendar.html  common.js  evaluations.html  identity.html  index.html  scheduling.html  styles.css  tasks.html  teams.html
app/identity/: custom_exception.py  dto.py  mappers.py  models.py  orm_models.py  repository.py  schemas.py  unit_of_work.py  use_cases.py  user_manager.py
app/models/: users.py
app/routers/: calendar.py  evaluations.py  identity.py  scheduling.py  tasks.py  teams.py
app/scheduling/: custom_exception.py  dto.py  handlers.py  management.py  mappers.py  models.py  orm_models.py  repository.py  unit_of_work.py  use_cases.py
app/scripts/: create_superuser.py
app/tasks/: custom_exception.py  dto.py  handlers.py  management.py  mappers.py  models.py  orm_models.py  repository.py  (+2 more)
tests/: conftest.py
(+68 files in other folders)
