[project]
name = "team-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.17.2",
    "anyio>=4.12.0",
    "asyncpg>=0.31.0",
    "coverage>=7.13.4",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "fastapi[standard]>=0.124.0",
    "itsdangerous>=2.2.0",
    "psycopg[binary]>=3.3.1",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "sqladmin>=0.23.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
